# Emlak

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Makefile  PROJE-PLANI.md  README.md  SECURITY-AUDIT-2026-02-26.md  docker-compose.yml  ecosystem.config.js  experience.md  package.json  pnpm-lock.yaml  reports.md  turbo.json
apps/api/: .env.example  Dockerfile  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
apps/api/data/: istanbul_districts.geojson
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial_schema.py  002_rls_policies.py  003_app_user_role.py  004_payment_table.py  005_outbox_inbox_events.py  006_payment_timeline.py  007_notifications_table.py  008_user_telegram_chat_id.py  009_area_deprem_price_models.py  010_valuation_scraped_listing.py  011_property_fts_trigger.py  012_model_registry_prediction_logs.py  013_turkish_search_config.py  014_usage_quotas.py  015_area_demographics.py  016_customer_update_match_model.py  017_customer_notes.py  018_usage_quota_expand.py  019_showcase_model.py  020_performance_indexes.py  021_transaction_audit_log.py  022_property_form_standardization.py  023_customer_demographics.py  024_bank_rates_table.py  025_appointments.py  026_rls_platform_admin_bypass.py
apps/api/scripts/: seed_demo.py  seed_showcases_expand.py
apps/api/src/: __init__.py  celery_app.py  config.py  database.py  dependencies.py  main.py
apps/api/src/core/: exceptions.py  logging.py  plan_policy.py  provenance.py  rate_limit.py  refresh_metrics.py  sentry.py  storage.py  sync_database.py  telemetry.py  turkish.py
apps/api/src/listings/: __init__.py  credit_router.py  listing_assistant_router.py  listing_assistant_schemas.py  listing_assistant_service.py  photo_router.py  photo_service.py  portal_export_router.py  portal_export_schemas.py  portal_export_service.py  staging_router.py  staging_schemas.py  staging_service.py
apps/api/src/middleware/: __init__.py  request_id.py  tenant.py
apps/api/src/ml/: MODEL-EVALUATION-v0.md  MODEL-EVALUATION-v1.md  confidence_interval.py  drift_monitor.py  evaluate_model.py  evaluate_model_v1.py  evaluation_results.json  feature_engineering.py  model_registry_entry.json  model_registry_entry_v1.json  register_model.py  register_model_v1.py  train_model.py  train_model_v1.py  trainer.py  weekly_report.py
apps/api/src/models/: __init__.py  appointment.py  area_analysis.py  audit_log.py  bank_rate.py  base.py  customer.py  customer_note.py  deprem_risk.py  inbox_event.py  match.py  message.py  model_registry.py  notification.py  office.py  outbox_event.py  payment.py  prediction_log.py  price_history.py  property.py  scraped_listing.py  showcase.py  subscription.py  transaction.py  user.py  valuation.py
apps/api/src/modules/: __init__.py
apps/api/src/scripts/: __init__.py  seed_demographics.py  seed_pilot_data.py
apps/api/src/services/: __init__.py  dlq_service.py  inbox_service.py  openai_config.py  openai_exceptions.py  openai_service.py  outbox_monitor.py  outbox_worker.py  pdf_service.py  retry_policy.py
apps/api/src/tasks/: __init__.py  area_refresh.py  base.py  daily_report.py  deprem_risk_refresh.py  drift_check.py  outbox_monitor_task.py  outbox_poll.py  refresh_monitor.py  signals.py  update_bank_rates.py  weekly_report.py
apps/api/tests/: conftest.py  test_cross_module.py  test_inbox_dedup.py  test_outbox_integration.py  test_outbox_monitor.py  test_payment_e2e.py  test_payment_webhook.py  test_pdf_smoke.py  test_retry_policy.py  test_rls.py  test_rls_security.py  test_s10_telegram.py  test_s5_valuation.py  test_s5_valuation_functional.py  test_s6_area.py  test_s7_crm.py  test_s8_listing.py  test_s9_showcase.py  test_search_quality.py  test_turkish_search.py  test_webhook_signature.py
apps/api/tests/e2e/: test_data_pipeline_e2e.py
apps/api/tests/integration/: test_data_pipeline.py
apps/api/tests/unit/: conftest.py  test_bot_error_handling.py  test_bot_notification.py  test_calculator_service.py  test_conversation_state.py  test_normalizers.py  (+2 more)
(+393 files in other folders)
