[project]
name = "emlak-api"
version = "0.1.0"
description = "Emlak Teknoloji Platformu - Backend API"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # ---------- Web Framework ----------
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # ---------- Database ----------
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "geoalchemy2>=0.15.0",
    "psycopg2-binary>=2.9.9",
    # ---------- Settings & Validation ----------
    "pydantic-settings>=2.6.0",
    # ---------- Auth ----------
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "email-validator>=2.1.0",
    # ---------- Object Storage ----------
    "aiobotocore>=2.15.0",
    # ---------- Cache & Task Queue ----------
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    # ---------- Templating ----------
    "Jinja2>=3.1,<4.0",
    "PyYAML>=6.0",
    # ---------- Messaging ----------
    "aiogram>=3.4,<4.0",
    # ---------- HTTP Client (Data Pipeline) ----------
    "httpx>=0.28.0",
    # ---------- Observability ----------
    "sentry-sdk[fastapi]>=2.18.0",
    "structlog>=24.4.0",
    # ---------- OpenTelemetry ----------
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.8.0",
    "pandas>=3.0.1",
    "joblib>=1.5.3",
    "optuna>=4.0.0",
    # ---------- PDF Generation ----------
    "weasyprint>=62.0",
    # ---------- OpenAI & Image Processing ----------
    "openai>=1.60.0",
    "Pillow>=10.0.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    # ---------- Linting ----------
    "ruff>=0.8.0",

    # ---------- Testing ----------
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",

    # ---------- Type Checking ----------
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF001", # ambiguous unicode in string — Turkish chars (ı, İ, ş, ğ, ü, ö, ç)
    "RUF002", # ambiguous unicode in docstring — Turkish project
    "RUF003", # ambiguous unicode in comment — Turkish project
]

[tool.ruff.lint.per-file-ignores]
"src/models/*.py" = ["TCH003"]           # uuid needed at runtime for SQLAlchemy Mapped types
"src/modules/*/router.py" = ["TCH001"]   # FastAPI resolves Annotated types at runtime via get_type_hints()
"src/modules/**/*_router.py" = ["TCH001", "TCH003"]  # Same for named router files — Pydantic + FastAPI resolve types at runtime
"src/modules/data_pipeline/clients/*.py" = ["TCH003"]  # httpx needed at runtime for API clients
"src/modules/data_pipeline/schemas/*.py" = ["TCH003"]  # Pydantic resolves date/datetime types at runtime
"migrations/*.py" = ["E402"]             # Alembic requires imports after config setup

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
